[lutron] Replace calls to methods deprecated in Java 11 (#8602)
* [lutron] Replace calls to methods deprecated in Java 11
* [lutron] Resolve comments